Add consistent code resolution across the library
- Flexible input: accept ISO codes, country names, or EIC codes
- PSR types accept both codes ("B16") and names ("Solar")
- Output resolves EIC domains to ISO codes (in_domain/out_domain)
- Add country_name() and psr_name() public helpers
- Notebooks use country_name() instead of manual dicts

--- a/examples/balancing.ipynb
+++ b/examples/balancing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3632d79f",
+   "id": "c02a18eb",
    "metadata": {},
    "source": [
     "# Balancing Data — ENTSO-E Examples\n",
@@ -13,13 +13,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4c2c7dc3",
+   "id": "02e5427b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:50.814849Z",
-     "iopub.status.busy": "2026-02-15T15:03:50.814747Z",
-     "iopub.status.idle": "2026-02-15T15:03:51.206550Z",
-     "shell.execute_reply": "2026-02-15T15:03:51.206065Z"
+     "iopub.execute_input": "2026-02-15T15:15:55.519676Z",
+     "iopub.status.busy": "2026-02-15T15:15:55.519568Z",
+     "iopub.status.idle": "2026-02-15T15:15:56.023878Z",
+     "shell.execute_reply": "2026-02-15T15:15:56.023430Z"
     }
    },
    "outputs": [],
@@ -27,14 +27,14 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
-    "from entsoe import Client\n",
+    "from entsoe import Client, country_name\n",
     "\n",
     "client = Client()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "63dbf5f5",
+   "id": "18cb04fe",
    "metadata": {},
    "source": [
     "## 1. Imbalance Prices — France (1 week)"
@@ -43,13 +43,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4611e466",
+   "id": "b69608c6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:51.208404Z",
-     "iopub.status.busy": "2026-02-15T15:03:51.208242Z",
-     "iopub.status.idle": "2026-02-15T15:03:52.660604Z",
-     "shell.execute_reply": "2026-02-15T15:03:52.659759Z"
+     "iopub.execute_input": "2026-02-15T15:15:56.026934Z",
+     "iopub.status.busy": "2026-02-15T15:15:56.026702Z",
+     "iopub.status.idle": "2026-02-15T15:15:57.900759Z",
+     "shell.execute_reply": "2026-02-15T15:15:57.899957Z"
     }
    },
    "outputs": [
@@ -145,13 +145,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a9a2e43c",
+   "id": "dd580a6c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:52.665147Z",
-     "iopub.status.busy": "2026-02-15T15:03:52.665011Z",
-     "iopub.status.idle": "2026-02-15T15:03:53.414803Z",
-     "shell.execute_reply": "2026-02-15T15:03:53.414056Z"
+     "iopub.execute_input": "2026-02-15T15:15:57.908139Z",
+     "iopub.status.busy": "2026-02-15T15:15:57.908003Z",
+     "iopub.status.idle": "2026-02-15T15:15:58.677004Z",
+     "shell.execute_reply": "2026-02-15T15:15:58.676528Z"
     }
    },
    "outputs": [
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56460dfd",
+   "id": "5f7bc13a",
    "metadata": {},
    "source": [
     "## 2. Imbalance Prices — Multi-Country"
@@ -1687,13 +1687,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0cb916cc",
+   "id": "312213f6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:53.416894Z",
-     "iopub.status.busy": "2026-02-15T15:03:53.416764Z",
-     "iopub.status.idle": "2026-02-15T15:03:55.811207Z",
-     "shell.execute_reply": "2026-02-15T15:03:55.810719Z"
+     "iopub.execute_input": "2026-02-15T15:15:58.679064Z",
+     "iopub.status.busy": "2026-02-15T15:15:58.678926Z",
+     "iopub.status.idle": "2026-02-15T15:16:01.597170Z",
+     "shell.execute_reply": "2026-02-15T15:16:01.596139Z"
     }
    },
    "outputs": [
@@ -5762,11 +5762,11 @@
     }
    ],
    "source": [
-    "countries = {\"FR\": \"France\", \"NL\": \"Netherlands\", \"BE\": \"Belgium\"}\n",
+    "countries = [\"FR\", \"NL\", \"BE\"]\n",
     "frames = []\n",
-    "for code, name in countries.items():\n",
+    "for code in countries:\n",
     "    df = client.balancing.imbalance_prices(start, end, country=code)\n",
-    "    df[\"country\"] = name\n",
+    "    df[\"country\"] = country_name(code)\n",
     "    frames.append(df)\n",
     "\n",
     "df_multi = pd.concat(frames, ignore_index=True)\n",
@@ -5781,7 +5781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38b26d04",
+   "id": "2deca6a7",
    "metadata": {},
    "source": [
     "## 3. Price Distribution — Histogram"
@@ -5790,13 +5790,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cdcebf45",
+   "id": "3d8946c8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:55.817676Z",
-     "iopub.status.busy": "2026-02-15T15:03:55.817490Z",
-     "iopub.status.idle": "2026-02-15T15:03:55.840503Z",
-     "shell.execute_reply": "2026-02-15T15:03:55.839857Z"
+     "iopub.execute_input": "2026-02-15T15:16:01.605247Z",
+     "iopub.status.busy": "2026-02-15T15:16:01.605008Z",
+     "iopub.status.idle": "2026-02-15T15:16:01.627617Z",
+     "shell.execute_reply": "2026-02-15T15:16:01.627123Z"
     }
    },
    "outputs": [
@@ -6703,7 +6703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63ad2446",
+   "id": "45d08e70",
    "metadata": {},
    "source": [
     "## 4. Imbalance Prices vs Day-Ahead Prices"
@@ -6712,13 +6712,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c5c43565",
+   "id": "9ccdac10",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:55.841937Z",
-     "iopub.status.busy": "2026-02-15T15:03:55.841824Z",
-     "iopub.status.idle": "2026-02-15T15:03:56.869835Z",
-     "shell.execute_reply": "2026-02-15T15:03:56.869017Z"
+     "iopub.execute_input": "2026-02-15T15:16:01.629501Z",
+     "iopub.status.busy": "2026-02-15T15:16:01.629363Z",
+     "iopub.status.idle": "2026-02-15T15:16:02.653767Z",
+     "shell.execute_reply": "2026-02-15T15:16:02.653230Z"
     }
    },
    "outputs": [
