--- a/examples/load.ipynb
+++ b/examples/load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a009ef3f",
+   "id": "ba18b0dc",
    "metadata": {},
    "source": [
     "# Load Data — ENTSO-E Examples\n",
@@ -13,13 +13,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "384e35ec",
+   "id": "f1fee103",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:14.716995Z",
-     "iopub.status.busy": "2026-02-15T15:03:14.716858Z",
-     "iopub.status.idle": "2026-02-15T15:03:15.518486Z",
-     "shell.execute_reply": "2026-02-15T15:03:15.517659Z"
+     "iopub.execute_input": "2026-02-15T15:15:05.867484Z",
+     "iopub.status.busy": "2026-02-15T15:15:05.867349Z",
+     "iopub.status.idle": "2026-02-15T15:15:06.678357Z",
+     "shell.execute_reply": "2026-02-15T15:15:06.677841Z"
     }
    },
    "outputs": [],
@@ -27,14 +27,14 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
-    "from entsoe import Client\n",
+    "from entsoe import Client, country_name\n",
     "\n",
     "client = Client()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f5acd3f3",
+   "id": "557cb621",
    "metadata": {},
    "source": [
     "## 1. Actual Load — France (1 week)"
@@ -43,13 +43,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9aa2cd40",
+   "id": "4314488c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:15.521274Z",
-     "iopub.status.busy": "2026-02-15T15:03:15.520868Z",
-     "iopub.status.idle": "2026-02-15T15:03:17.533557Z",
-     "shell.execute_reply": "2026-02-15T15:03:17.532878Z"
+     "iopub.execute_input": "2026-02-15T15:15:06.679924Z",
+     "iopub.status.busy": "2026-02-15T15:15:06.679792Z",
+     "iopub.status.idle": "2026-02-15T15:15:09.355125Z",
+     "shell.execute_reply": "2026-02-15T15:15:09.354749Z"
     }
    },
    "outputs": [
@@ -139,13 +139,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d51d5eed",
+   "id": "066796b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:17.535816Z",
-     "iopub.status.busy": "2026-02-15T15:03:17.535680Z",
-     "iopub.status.idle": "2026-02-15T15:03:18.392144Z",
-     "shell.execute_reply": "2026-02-15T15:03:18.391615Z"
+     "iopub.execute_input": "2026-02-15T15:15:09.356581Z",
+     "iopub.status.busy": "2026-02-15T15:15:09.356477Z",
+     "iopub.status.idle": "2026-02-15T15:15:10.153799Z",
+     "shell.execute_reply": "2026-02-15T15:15:10.153255Z"
     }
    },
    "outputs": [
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "456d2a21",
+   "id": "f4e7dae3",
    "metadata": {},
    "source": [
     "## 2. Load Forecast vs Actual"
@@ -1179,13 +1179,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c7f62930",
+   "id": "47bb922f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:18.393697Z",
-     "iopub.status.busy": "2026-02-15T15:03:18.393586Z",
-     "iopub.status.idle": "2026-02-15T15:03:18.784102Z",
-     "shell.execute_reply": "2026-02-15T15:03:18.783460Z"
+     "iopub.execute_input": "2026-02-15T15:15:10.155490Z",
+     "iopub.status.busy": "2026-02-15T15:15:10.155388Z",
+     "iopub.status.idle": "2026-02-15T15:15:10.738543Z",
+     "shell.execute_reply": "2026-02-15T15:15:10.738091Z"
     }
    },
    "outputs": [
@@ -2378,7 +2378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "403819c0",
+   "id": "5bd5efc3",
    "metadata": {},
    "source": [
     "## 3. Forecast Error"
@@ -2387,13 +2387,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e0ad9fe3",
+   "id": "f9780467",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:18.785677Z",
-     "iopub.status.busy": "2026-02-15T15:03:18.785531Z",
-     "iopub.status.idle": "2026-02-15T15:03:18.812037Z",
-     "shell.execute_reply": "2026-02-15T15:03:18.811529Z"
+     "iopub.execute_input": "2026-02-15T15:15:10.739888Z",
+     "iopub.status.busy": "2026-02-15T15:15:10.739776Z",
+     "iopub.status.idle": "2026-02-15T15:15:10.765169Z",
+     "shell.execute_reply": "2026-02-15T15:15:10.764601Z"
     }
    },
    "outputs": [
@@ -3482,7 +3482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f986040f",
+   "id": "0c3c19ed",
    "metadata": {},
    "source": [
     "## 4. Multi-Country Load Comparison"
@@ -3491,13 +3491,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "55b1b55f",
+   "id": "50e95884",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:18.813436Z",
-     "iopub.status.busy": "2026-02-15T15:03:18.813322Z",
-     "iopub.status.idle": "2026-02-15T15:03:20.718770Z",
-     "shell.execute_reply": "2026-02-15T15:03:20.718111Z"
+     "iopub.execute_input": "2026-02-15T15:15:10.766582Z",
+     "iopub.status.busy": "2026-02-15T15:15:10.766455Z",
+     "iopub.status.idle": "2026-02-15T15:15:13.960630Z",
+     "shell.execute_reply": "2026-02-15T15:15:13.960084Z"
     }
    },
    "outputs": [
@@ -3557,8 +3557,8 @@
          "yaxis": "y"
         },
         {
-         "hovertemplate": "country=Germany<br>=%{x}<br>Load (MW)=%{y}<extra></extra>",
-         "legendgroup": "Germany",
+         "hovertemplate": "country=Germany/Luxembourg<br>=%{x}<br>Load (MW)=%{y}<extra></extra>",
+         "legendgroup": "Germany/Luxembourg",
          "line": {
           "color": "#EF553B",
           "dash": "solid"
@@ -3567,7 +3567,7 @@
           "symbol": "circle"
          },
          "mode": "lines",
-         "name": "Germany",
+         "name": "Germany/Luxembourg",
          "orientation": "v",
          "showlegend": true,
          "type": "scatter",
@@ -4614,11 +4614,11 @@
     "start = \"2024-06-03\"\n",
     "end = \"2024-06-04\"\n",
     "\n",
-    "countries = {\"FR\": \"France\", \"DE_LU\": \"Germany\", \"ES\": \"Spain\"}\n",
+    "countries = [\"FR\", \"DE_LU\", \"ES\"]\n",
     "frames = []\n",
-    "for code, name in countries.items():\n",
+    "for code in countries:\n",
     "    df = client.load.actual(start, end, country=code)\n",
-    "    df[\"country\"] = name\n",
+    "    df[\"country\"] = country_name(code)\n",
     "    frames.append(df)\n",
     "\n",
     "df_multi = pd.concat(frames, ignore_index=True)\n",
