--- a/examples/prices.ipynb
+++ b/examples/prices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "98ee787f",
+   "id": "24d8018e",
    "metadata": {},
    "source": [
     "# Day-Ahead Prices — ENTSO-E Examples\n",
@@ -13,13 +13,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "49c8c83a",
+   "id": "0088e3a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:21.830137Z",
-     "iopub.status.busy": "2026-02-15T15:03:21.830046Z",
-     "iopub.status.idle": "2026-02-15T15:03:22.250194Z",
-     "shell.execute_reply": "2026-02-15T15:03:22.249582Z"
+     "iopub.execute_input": "2026-02-15T15:15:15.278152Z",
+     "iopub.status.busy": "2026-02-15T15:15:15.278067Z",
+     "iopub.status.idle": "2026-02-15T15:15:15.730285Z",
+     "shell.execute_reply": "2026-02-15T15:15:15.729650Z"
     }
    },
    "outputs": [],
@@ -27,14 +27,14 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
-    "from entsoe import Client\n",
+    "from entsoe import Client, country_name\n",
     "\n",
     "client = Client()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9dff43d2",
+   "id": "9b5ab4fe",
    "metadata": {},
    "source": [
     "## 1. Day-Ahead Prices — France (1 week)"
@@ -43,13 +43,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "85a16ff4",
+   "id": "43775eec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:22.251984Z",
-     "iopub.status.busy": "2026-02-15T15:03:22.251812Z",
-     "iopub.status.idle": "2026-02-15T15:03:23.572489Z",
-     "shell.execute_reply": "2026-02-15T15:03:23.571889Z"
+     "iopub.execute_input": "2026-02-15T15:15:15.732066Z",
+     "iopub.status.busy": "2026-02-15T15:15:15.731877Z",
+     "iopub.status.idle": "2026-02-15T15:15:24.185120Z",
+     "shell.execute_reply": "2026-02-15T15:15:24.184427Z"
     }
    },
    "outputs": [
@@ -87,8 +87,8 @@
        "      <th>0</th>\n",
        "      <td>2024-05-31 22:00:00+00:00</td>\n",
        "      <td>4.99</td>\n",
-       "      <td>10YFR-RTE------C</td>\n",
-       "      <td>10YFR-RTE------C</td>\n",
+       "      <td>FR</td>\n",
+       "      <td>FR</td>\n",
        "      <td>EUR</td>\n",
        "      <td>MWH</td>\n",
        "    </tr>\n",
@@ -96,8 +96,8 @@
        "      <th>1</th>\n",
        "      <td>2024-05-31 23:00:00+00:00</td>\n",
        "      <td>3.25</td>\n",
-       "      <td>10YFR-RTE------C</td>\n",
-       "      <td>10YFR-RTE------C</td>\n",
+       "      <td>FR</td>\n",
+       "      <td>FR</td>\n",
        "      <td>EUR</td>\n",
        "      <td>MWH</td>\n",
        "    </tr>\n",
@@ -105,8 +105,8 @@
        "      <th>2</th>\n",
        "      <td>2024-06-01 01:00:00+00:00</td>\n",
        "      <td>1.23</td>\n",
-       "      <td>10YFR-RTE------C</td>\n",
-       "      <td>10YFR-RTE------C</td>\n",
+       "      <td>FR</td>\n",
+       "      <td>FR</td>\n",
        "      <td>EUR</td>\n",
        "      <td>MWH</td>\n",
        "    </tr>\n",
@@ -114,8 +114,8 @@
        "      <th>3</th>\n",
        "      <td>2024-06-01 02:00:00+00:00</td>\n",
        "      <td>0.09</td>\n",
-       "      <td>10YFR-RTE------C</td>\n",
-       "      <td>10YFR-RTE------C</td>\n",
+       "      <td>FR</td>\n",
+       "      <td>FR</td>\n",
        "      <td>EUR</td>\n",
        "      <td>MWH</td>\n",
        "    </tr>\n",
@@ -123,8 +123,8 @@
        "      <th>4</th>\n",
        "      <td>2024-06-01 03:00:00+00:00</td>\n",
        "      <td>3.25</td>\n",
-       "      <td>10YFR-RTE------C</td>\n",
-       "      <td>10YFR-RTE------C</td>\n",
+       "      <td>FR</td>\n",
+       "      <td>FR</td>\n",
        "      <td>EUR</td>\n",
        "      <td>MWH</td>\n",
        "    </tr>\n",
@@ -133,19 +133,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                  timestamp  value         in_domain        out_domain  \\\n",
-       "0 2024-05-31 22:00:00+00:00   4.99  10YFR-RTE------C  10YFR-RTE------C   \n",
-       "1 2024-05-31 23:00:00+00:00   3.25  10YFR-RTE------C  10YFR-RTE------C   \n",
-       "2 2024-06-01 01:00:00+00:00   1.23  10YFR-RTE------C  10YFR-RTE------C   \n",
-       "3 2024-06-01 02:00:00+00:00   0.09  10YFR-RTE------C  10YFR-RTE------C   \n",
-       "4 2024-06-01 03:00:00+00:00   3.25  10YFR-RTE------C  10YFR-RTE------C   \n",
-       "\n",
-       "  currency price_unit  \n",
-       "0      EUR        MWH  \n",
-       "1      EUR        MWH  \n",
-       "2      EUR        MWH  \n",
-       "3      EUR        MWH  \n",
-       "4      EUR        MWH  "
+       "                  timestamp  value in_domain out_domain currency price_unit\n",
+       "0 2024-05-31 22:00:00+00:00   4.99        FR         FR      EUR        MWH\n",
+       "1 2024-05-31 23:00:00+00:00   3.25        FR         FR      EUR        MWH\n",
+       "2 2024-06-01 01:00:00+00:00   1.23        FR         FR      EUR        MWH\n",
+       "3 2024-06-01 02:00:00+00:00   0.09        FR         FR      EUR        MWH\n",
+       "4 2024-06-01 03:00:00+00:00   3.25        FR         FR      EUR        MWH"
       ]
      },
      "execution_count": 2,
@@ -164,13 +157,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8220c01f",
+   "id": "8addf9c3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:23.576877Z",
-     "iopub.status.busy": "2026-02-15T15:03:23.576717Z",
-     "iopub.status.idle": "2026-02-15T15:03:24.389155Z",
-     "shell.execute_reply": "2026-02-15T15:03:24.388401Z"
+     "iopub.execute_input": "2026-02-15T15:15:24.190282Z",
+     "iopub.status.busy": "2026-02-15T15:15:24.190125Z",
+     "iopub.status.idle": "2026-02-15T15:15:25.043650Z",
+     "shell.execute_reply": "2026-02-15T15:15:25.043084Z"
     }
    },
    "outputs": [
@@ -1192,7 +1185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41ba12aa",
+   "id": "1956efe2",
    "metadata": {},
    "source": [
     "## 2. Multi-Country Price Comparison"
@@ -1201,13 +1194,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "23056a3e",
+   "id": "ee6683e7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:24.390593Z",
-     "iopub.status.busy": "2026-02-15T15:03:24.390428Z",
-     "iopub.status.idle": "2026-02-15T15:03:27.609346Z",
-     "shell.execute_reply": "2026-02-15T15:03:27.608462Z"
+     "iopub.execute_input": "2026-02-15T15:15:25.046192Z",
+     "iopub.status.busy": "2026-02-15T15:15:25.046081Z",
+     "iopub.status.idle": "2026-02-15T15:15:28.119045Z",
+     "shell.execute_reply": "2026-02-15T15:15:28.118339Z"
     }
    },
    "outputs": [
@@ -3445,11 +3438,11 @@
     }
    ],
    "source": [
-    "countries = {\"FR\": \"France\", \"DE_LU\": \"Germany/Luxembourg\", \"ES\": \"Spain\", \"NL\": \"Netherlands\"}\n",
+    "countries = [\"FR\", \"DE_LU\", \"ES\", \"NL\"]\n",
     "frames = []\n",
-    "for code, name in countries.items():\n",
+    "for code in countries:\n",
     "    df = client.prices.day_ahead(start, end, country=code)\n",
-    "    df[\"country\"] = name\n",
+    "    df[\"country\"] = country_name(code)\n",
     "    frames.append(df)\n",
     "\n",
     "df_multi = pd.concat(frames, ignore_index=True)\n",
@@ -3464,7 +3457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "843337a1",
+   "id": "6f3028e3",
    "metadata": {},
    "source": [
     "## 3. Price Distribution"
@@ -3473,13 +3466,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7300029d",
+   "id": "d8b3cb12",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:27.617281Z",
-     "iopub.status.busy": "2026-02-15T15:03:27.617026Z",
-     "iopub.status.idle": "2026-02-15T15:03:27.641278Z",
-     "shell.execute_reply": "2026-02-15T15:03:27.640814Z"
+     "iopub.execute_input": "2026-02-15T15:15:28.121412Z",
+     "iopub.status.busy": "2026-02-15T15:15:28.121272Z",
+     "iopub.status.idle": "2026-02-15T15:15:28.146744Z",
+     "shell.execute_reply": "2026-02-15T15:15:28.145856Z"
     }
    },
    "outputs": [
@@ -5739,7 +5732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "764dfdaf",
+   "id": "1e190cac",
    "metadata": {},
    "source": [
     "## 4. Hourly Price Heatmap — France (1 month)"
@@ -5748,13 +5741,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4bacb611",
+   "id": "6cc12dd2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:27.643706Z",
-     "iopub.status.busy": "2026-02-15T15:03:27.643585Z",
-     "iopub.status.idle": "2026-02-15T15:03:28.427842Z",
-     "shell.execute_reply": "2026-02-15T15:03:28.427245Z"
+     "iopub.execute_input": "2026-02-15T15:15:28.149896Z",
+     "iopub.status.busy": "2026-02-15T15:15:28.149643Z",
+     "iopub.status.idle": "2026-02-15T15:15:29.588596Z",
+     "shell.execute_reply": "2026-02-15T15:15:29.587894Z"
     }
    },
    "outputs": [
