--- a/examples/transmission.ipynb
+++ b/examples/transmission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "400f2463",
+   "id": "2d566cb5",
    "metadata": {},
    "source": [
     "# Transmission Data — ENTSO-E Examples\n",
@@ -13,13 +13,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a5da970f",
+   "id": "c57244b0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:42.559364Z",
-     "iopub.status.busy": "2026-02-15T15:03:42.559269Z",
-     "iopub.status.idle": "2026-02-15T15:03:43.052504Z",
-     "shell.execute_reply": "2026-02-15T15:03:43.051935Z"
+     "iopub.execute_input": "2026-02-15T15:15:48.078346Z",
+     "iopub.status.busy": "2026-02-15T15:15:48.078250Z",
+     "iopub.status.idle": "2026-02-15T15:15:48.549518Z",
+     "shell.execute_reply": "2026-02-15T15:15:48.548896Z"
     }
    },
    "outputs": [],
@@ -27,14 +27,14 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
-    "from entsoe import Client\n",
+    "from entsoe import Client, country_name\n",
     "\n",
     "client = Client()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2925ed20",
+   "id": "22c879c4",
    "metadata": {},
    "source": [
     "## 1. Physical Cross-Border Flows — France → Germany"
@@ -43,13 +43,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "72125a8a",
+   "id": "1c4e7a40",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:43.054497Z",
-     "iopub.status.busy": "2026-02-15T15:03:43.054305Z",
-     "iopub.status.idle": "2026-02-15T15:03:44.154410Z",
-     "shell.execute_reply": "2026-02-15T15:03:44.153779Z"
+     "iopub.execute_input": "2026-02-15T15:15:48.551906Z",
+     "iopub.status.busy": "2026-02-15T15:15:48.551681Z",
+     "iopub.status.idle": "2026-02-15T15:15:49.855872Z",
+     "shell.execute_reply": "2026-02-15T15:15:49.855337Z"
     }
    },
    "outputs": [
@@ -86,40 +86,40 @@
        "      <th>0</th>\n",
        "      <td>2024-05-31 22:00:00+00:00</td>\n",
        "      <td>3052.0245</td>\n",
-       "      <td>10Y1001A1001A82H</td>\n",
-       "      <td>10YFR-RTE------C</td>\n",
+       "      <td>DE_LU</td>\n",
+       "      <td>FR</td>\n",
        "      <td>MAW</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2024-05-31 23:00:00+00:00</td>\n",
        "      <td>2930.1105</td>\n",
-       "      <td>10Y1001A1001A82H</td>\n",
-       "      <td>10YFR-RTE------C</td>\n",
+       "      <td>DE_LU</td>\n",
+       "      <td>FR</td>\n",
        "      <td>MAW</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2024-06-01 00:00:00+00:00</td>\n",
        "      <td>3042.2400</td>\n",
-       "      <td>10Y1001A1001A82H</td>\n",
-       "      <td>10YFR-RTE------C</td>\n",
+       "      <td>DE_LU</td>\n",
+       "      <td>FR</td>\n",
        "      <td>MAW</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2024-06-01 01:00:00+00:00</td>\n",
        "      <td>3145.8575</td>\n",
-       "      <td>10Y1001A1001A82H</td>\n",
-       "      <td>10YFR-RTE------C</td>\n",
+       "      <td>DE_LU</td>\n",
+       "      <td>FR</td>\n",
        "      <td>MAW</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2024-06-01 02:00:00+00:00</td>\n",
        "      <td>3121.1760</td>\n",
-       "      <td>10Y1001A1001A82H</td>\n",
-       "      <td>10YFR-RTE------C</td>\n",
+       "      <td>DE_LU</td>\n",
+       "      <td>FR</td>\n",
        "      <td>MAW</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -127,19 +127,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                  timestamp      value         in_domain        out_domain  \\\n",
-       "0 2024-05-31 22:00:00+00:00  3052.0245  10Y1001A1001A82H  10YFR-RTE------C   \n",
-       "1 2024-05-31 23:00:00+00:00  2930.1105  10Y1001A1001A82H  10YFR-RTE------C   \n",
-       "2 2024-06-01 00:00:00+00:00  3042.2400  10Y1001A1001A82H  10YFR-RTE------C   \n",
-       "3 2024-06-01 01:00:00+00:00  3145.8575  10Y1001A1001A82H  10YFR-RTE------C   \n",
-       "4 2024-06-01 02:00:00+00:00  3121.1760  10Y1001A1001A82H  10YFR-RTE------C   \n",
-       "\n",
-       "  quantity_unit  \n",
-       "0           MAW  \n",
-       "1           MAW  \n",
-       "2           MAW  \n",
-       "3           MAW  \n",
-       "4           MAW  "
+       "                  timestamp      value in_domain out_domain quantity_unit\n",
+       "0 2024-05-31 22:00:00+00:00  3052.0245     DE_LU         FR           MAW\n",
+       "1 2024-05-31 23:00:00+00:00  2930.1105     DE_LU         FR           MAW\n",
+       "2 2024-06-01 00:00:00+00:00  3042.2400     DE_LU         FR           MAW\n",
+       "3 2024-06-01 01:00:00+00:00  3145.8575     DE_LU         FR           MAW\n",
+       "4 2024-06-01 02:00:00+00:00  3121.1760     DE_LU         FR           MAW"
       ]
      },
      "execution_count": 2,
@@ -160,13 +153,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d4a868a7",
+   "id": "81c60eb5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:44.158312Z",
-     "iopub.status.busy": "2026-02-15T15:03:44.158148Z",
-     "iopub.status.idle": "2026-02-15T15:03:44.890360Z",
-     "shell.execute_reply": "2026-02-15T15:03:44.889718Z"
+     "iopub.execute_input": "2026-02-15T15:15:49.858148Z",
+     "iopub.status.busy": "2026-02-15T15:15:49.857923Z",
+     "iopub.status.idle": "2026-02-15T15:15:50.573111Z",
+     "shell.execute_reply": "2026-02-15T15:15:50.572656Z"
     }
    },
    "outputs": [
@@ -1191,7 +1184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "869d21a7",
+   "id": "b7986b0b",
    "metadata": {},
    "source": [
     "## 2. Bidirectional Flows — France ↔ Germany"
@@ -1200,13 +1193,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "477cfe21",
+   "id": "1b688742",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:44.914295Z",
-     "iopub.status.busy": "2026-02-15T15:03:44.914150Z",
-     "iopub.status.idle": "2026-02-15T15:03:45.325627Z",
-     "shell.execute_reply": "2026-02-15T15:03:45.325070Z"
+     "iopub.execute_input": "2026-02-15T15:15:50.575658Z",
+     "iopub.status.busy": "2026-02-15T15:15:50.575545Z",
+     "iopub.status.idle": "2026-02-15T15:15:51.215435Z",
+     "shell.execute_reply": "2026-02-15T15:15:51.214946Z"
     }
    },
    "outputs": [
@@ -2238,7 +2231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96e24c6e",
+   "id": "9e409b1a",
    "metadata": {},
    "source": [
     "## 3. Scheduled Exchanges — France → Spain"
@@ -2247,13 +2240,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "87dacc79",
+   "id": "7109fe23",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:45.333550Z",
-     "iopub.status.busy": "2026-02-15T15:03:45.333414Z",
-     "iopub.status.idle": "2026-02-15T15:03:45.827165Z",
-     "shell.execute_reply": "2026-02-15T15:03:45.826471Z"
+     "iopub.execute_input": "2026-02-15T15:15:51.217834Z",
+     "iopub.status.busy": "2026-02-15T15:15:51.217716Z",
+     "iopub.status.idle": "2026-02-15T15:15:51.595401Z",
+     "shell.execute_reply": "2026-02-15T15:15:51.594669Z"
     }
    },
    "outputs": [
@@ -3266,7 +3259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c6213b8",
+   "id": "c6a3ee3b",
    "metadata": {},
    "source": [
     "## 4. Multi-Border Comparison from France"
@@ -3275,13 +3268,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b10d5b74",
+   "id": "5a1f52c5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:45.828816Z",
-     "iopub.status.busy": "2026-02-15T15:03:45.828665Z",
-     "iopub.status.idle": "2026-02-15T15:03:48.528589Z",
-     "shell.execute_reply": "2026-02-15T15:03:48.527953Z"
+     "iopub.execute_input": "2026-02-15T15:15:51.597096Z",
+     "iopub.status.busy": "2026-02-15T15:15:51.596975Z",
+     "iopub.status.idle": "2026-02-15T15:15:53.376794Z",
+     "shell.execute_reply": "2026-02-15T15:15:53.375868Z"
     }
    },
    "outputs": [
@@ -3293,8 +3286,8 @@
        },
        "data": [
         {
-         "hovertemplate": "border=FR → Germany<br>=%{x}<br>Flow (MW)=%{y}<extra></extra>",
-         "legendgroup": "FR → Germany",
+         "hovertemplate": "border=FR → Germany/Luxembourg<br>=%{x}<br>Flow (MW)=%{y}<extra></extra>",
+         "legendgroup": "FR → Germany/Luxembourg",
          "line": {
           "color": "#636efa",
           "dash": "solid"
@@ -3303,7 +3296,7 @@
           "symbol": "circle"
          },
          "mode": "lines",
-         "name": "FR → Germany",
+         "name": "FR → Germany/Luxembourg",
          "orientation": "v",
          "showlegend": true,
          "type": "scatter",
@@ -4335,13 +4328,13 @@
     "start = \"2024-06-03\"\n",
     "end = \"2024-06-04\"\n",
     "\n",
-    "borders = {\"DE_LU\": \"→ Germany\", \"ES\": \"→ Spain\", \"GB\": \"→ Great Britain\", \"IT_NORTH\": \"→ Italy (North)\"}\n",
+    "borders = [\"DE_LU\", \"ES\", \"GB\", \"IT_NORTH\"]\n",
     "frames = []\n",
-    "for code, label in borders.items():\n",
+    "for code in borders:\n",
     "    df = client.transmission.crossborder_flows(\n",
     "        start, end, country_from=\"FR\", country_to=code\n",
     "    )\n",
-    "    df[\"border\"] = f\"FR {label}\"\n",
+    "    df[\"border\"] = f\"FR → {country_name(code)}\"\n",
     "    frames.append(df)\n",
     "\n",
     "df_borders = pd.concat(frames, ignore_index=True)\n",
@@ -4356,7 +4349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c11f0f32",
+   "id": "e9f3735f",
    "metadata": {},
    "source": [
     "## 5. Net Transfer Capacity — France → Spain"
@@ -4365,13 +4358,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dcb8c021",
+   "id": "4c4d4b12",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:48.534049Z",
-     "iopub.status.busy": "2026-02-15T15:03:48.533919Z",
-     "iopub.status.idle": "2026-02-15T15:03:49.657449Z",
-     "shell.execute_reply": "2026-02-15T15:03:49.656578Z"
+     "iopub.execute_input": "2026-02-15T15:15:53.384409Z",
+     "iopub.status.busy": "2026-02-15T15:15:53.384227Z",
+     "iopub.status.idle": "2026-02-15T15:15:54.123199Z",
+     "shell.execute_reply": "2026-02-15T15:15:54.122536Z"
     }
    },
    "outputs": [
