--- a/examples/generation.ipynb
+++ b/examples/generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2640e135",
+   "id": "c65f9d70",
    "metadata": {},
    "source": [
     "# Generation Data — ENTSO-E Examples\n",
@@ -13,13 +13,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "16296f0a",
+   "id": "b069fbbe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:29.543713Z",
-     "iopub.status.busy": "2026-02-15T15:03:29.543621Z",
-     "iopub.status.idle": "2026-02-15T15:03:29.980381Z",
-     "shell.execute_reply": "2026-02-15T15:03:29.979850Z"
+     "iopub.execute_input": "2026-02-15T15:15:30.922370Z",
+     "iopub.status.busy": "2026-02-15T15:15:30.922297Z",
+     "iopub.status.idle": "2026-02-15T15:15:31.370162Z",
+     "shell.execute_reply": "2026-02-15T15:15:31.369640Z"
     }
    },
    "outputs": [],
@@ -27,14 +27,14 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
-    "from entsoe import Client\n",
+    "from entsoe import Client, country_name\n",
     "\n",
     "client = Client()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3d3741de",
+   "id": "84480846",
    "metadata": {},
    "source": [
     "## 1. Generation Mix — France (1 week)"
@@ -43,13 +43,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f92150dc",
+   "id": "1d8b1126",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:29.982059Z",
-     "iopub.status.busy": "2026-02-15T15:03:29.981919Z",
-     "iopub.status.idle": "2026-02-15T15:03:31.590248Z",
-     "shell.execute_reply": "2026-02-15T15:03:31.589786Z"
+     "iopub.execute_input": "2026-02-15T15:15:31.371595Z",
+     "iopub.status.busy": "2026-02-15T15:15:31.371460Z",
+     "iopub.status.idle": "2026-02-15T15:15:33.333701Z",
+     "shell.execute_reply": "2026-02-15T15:15:33.333198Z"
     }
    },
    "outputs": [
@@ -145,13 +145,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "db675502",
+   "id": "7fd8a3e7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:31.593561Z",
-     "iopub.status.busy": "2026-02-15T15:03:31.593430Z",
-     "iopub.status.idle": "2026-02-15T15:03:32.451343Z",
-     "shell.execute_reply": "2026-02-15T15:03:32.450813Z"
+     "iopub.execute_input": "2026-02-15T15:15:33.335927Z",
+     "iopub.status.busy": "2026-02-15T15:15:33.335825Z",
+     "iopub.status.idle": "2026-02-15T15:15:34.189596Z",
+     "shell.execute_reply": "2026-02-15T15:15:34.189139Z"
     }
    },
    "outputs": [
@@ -2942,7 +2942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b73da35a",
+   "id": "b3a22fce",
    "metadata": {},
    "source": [
     "## 2. Generation Share (Pie Chart)"
@@ -2951,13 +2951,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a0c499e8",
+   "id": "c9395bce",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:32.453493Z",
-     "iopub.status.busy": "2026-02-15T15:03:32.453341Z",
-     "iopub.status.idle": "2026-02-15T15:03:32.471667Z",
-     "shell.execute_reply": "2026-02-15T15:03:32.471015Z"
+     "iopub.execute_input": "2026-02-15T15:15:34.199963Z",
+     "iopub.status.busy": "2026-02-15T15:15:34.199811Z",
+     "iopub.status.idle": "2026-02-15T15:15:34.227559Z",
+     "shell.execute_reply": "2026-02-15T15:15:34.226950Z"
     }
    },
    "outputs": [
@@ -3806,7 +3806,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aec5449",
+   "id": "4cd7b733",
    "metadata": {},
    "source": [
     "## 3. Solar vs Wind — Daily Patterns"
@@ -3815,13 +3815,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8f237fd1",
+   "id": "5b0a374d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:32.472950Z",
-     "iopub.status.busy": "2026-02-15T15:03:32.472836Z",
-     "iopub.status.idle": "2026-02-15T15:03:33.698060Z",
-     "shell.execute_reply": "2026-02-15T15:03:33.697567Z"
+     "iopub.execute_input": "2026-02-15T15:15:34.228698Z",
+     "iopub.status.busy": "2026-02-15T15:15:34.228597Z",
+     "iopub.status.idle": "2026-02-15T15:15:36.094094Z",
+     "shell.execute_reply": "2026-02-15T15:15:36.093401Z"
     }
    },
    "outputs": [
@@ -4825,8 +4825,8 @@
     "start = \"2024-06-03\"\n",
     "end = \"2024-06-06\"\n",
     "\n",
-    "df_solar = client.generation.actual(start, end, country=\"FR\", psr_type=\"B16\")\n",
-    "df_wind = client.generation.actual(start, end, country=\"FR\", psr_type=\"B19\")\n",
+    "df_solar = client.generation.actual(start, end, country=\"FR\", psr_type=\"Solar\")\n",
+    "df_wind = client.generation.actual(start, end, country=\"FR\", psr_type=\"Wind Onshore\")\n",
     "\n",
     "df_ren = pd.concat([df_solar, df_wind], ignore_index=True)\n",
     "\n",
@@ -4840,7 +4840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c799985",
+   "id": "f3275b47",
    "metadata": {},
    "source": [
     "## 4. Wind & Solar Forecast vs Actual"
@@ -4849,13 +4849,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f9cdcfef",
+   "id": "3012a193",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:33.699582Z",
-     "iopub.status.busy": "2026-02-15T15:03:33.699465Z",
-     "iopub.status.idle": "2026-02-15T15:03:34.441880Z",
-     "shell.execute_reply": "2026-02-15T15:03:34.441023Z"
+     "iopub.execute_input": "2026-02-15T15:15:36.095683Z",
+     "iopub.status.busy": "2026-02-15T15:15:36.095559Z",
+     "iopub.status.idle": "2026-02-15T15:15:36.662562Z",
+     "shell.execute_reply": "2026-02-15T15:15:36.662108Z"
     }
    },
    "outputs": [
@@ -5824,7 +5824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fde9c4ce",
+   "id": "87f1230a",
    "metadata": {},
    "source": [
     "## 5. Installed Capacity by Type"
@@ -5833,13 +5833,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "39469f0e",
+   "id": "e143d947",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-15T15:03:34.443826Z",
-     "iopub.status.busy": "2026-02-15T15:03:34.443686Z",
-     "iopub.status.idle": "2026-02-15T15:03:34.855524Z",
-     "shell.execute_reply": "2026-02-15T15:03:34.854676Z"
+     "iopub.execute_input": "2026-02-15T15:15:36.664824Z",
+     "iopub.status.busy": "2026-02-15T15:15:36.664663Z",
+     "iopub.status.idle": "2026-02-15T15:15:37.574579Z",
+     "shell.execute_reply": "2026-02-15T15:15:37.573989Z"
     }
    },
    "outputs": [
